--- a/src/pages/join.astro
+++ b/src/pages/join.astro
@@ -1,10 +1,6 @@
 ---
+export const prerender = true
 const req = Astro.locals;
-
-//const response = await fetch(`https://discord.com/api/invite/${req.user.name}`);
-//const data = await response.json();
-
-//console.log(data)
 ---
 
 <html lang="en">
