--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,6 +14,7 @@ const identity = {
 
 }
 
+import KFooter from "../components/KFooter.astro";
 import "../styles/global.css"
 ---
 
@@ -25,8 +26,14 @@ import "../styles/global.css"
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
 	</head>
-	<body>
-		<h1>{pageTitle}</h1>
-		<p>About Me: {identity.name}</p>
+	<body style="background-color: #1b1b1b;">
+		<div class="content" style="display: flex; justify-content: center; align-items: center;">
+			<h1 class="grotesk-head-2" style="line-height: 0.5; font-size: 2.5em;">KYANOXIA RIVERA</h1>
+			<h1 class="grotesk-head" style="font-size: 5em; line-height: 0.5;">{pageTitle}</h1>
+		</div>
+		<a href="/card" class="dm-foot">COMING SOON</a>
 	</body>
+	<footer>
+		<KFooter />
+	</footer>
 </html>
