--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,21 +1,138 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+
+@font-face {
+  font-family: multiplexed;
+  font-weight: normal;
+  font-style: normal;
+  src: url(font/multiplexed.ttf);
+}
+
+@font-face {
+  src: url(font/QuantaGroteskPro-BlackItalic.ttf);
+  font-family: grotesk;
+  font-weight: bold;
+  font-style: italic;
+}
+
+@font-face {
+  src: url(font/QuantaGroteskPro-Regular.ttf);
+  font-family: grotesk;
+  font-weight: normal;
+  font-style: normal;
+}
+
+.multiplexed{
+  font-family: multiplexed;
+  text-transform: lowercase;
+}
+
+.grotesk-head {
+  font-family: grotesk;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-style: italic;
+}
+
+.grotesk-head-2 {
+  font-family: grotesk;
+  text-transform: uppercase;
+  font-weight: normal;
+  font-style: normal;
+}
+
+.dm-foot {
+  font-family: 'DM Sans';
+  font-weight: 200;
+  letter-spacing: 0.5ch;
+  font-size: xx-large;
+  padding-bottom: 50px;
+  text-decoration: none;
+  color: whitesmoke;
+}
+
 html {
-    background-color: #f1f5f9;
-    font-family: sans-serif;
-  }
+  background-color: #1f1f1f;
+  font-family: sans-serif;
+  color: white;
+  height: 100%;
+}
   
-  body {
-    margin: 0 auto;
-    width: 100%;
-    max-width: 80ch;
-    padding: 1rem;
-    line-height: 1.5;
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
-  
-  h1 {
-    margin: 1rem 0;
-    font-size: 2.5rem;
-  }
+body {
+  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+  line-height: 1.5;
+  text-align: center;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+h1 {
+  margin: 1rem 0;
+  font-size: 2.5rem;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  max-width: 80ch;
+  margin: 0 auto;
+  height: 100%;
+}
+
+.social-con {
+  display: flex;
+  flex-direction: column;
+  margin: auto 0;
+}
+
+.separator-lg {
+  height: 5em;
+}
+
+.separator {
+  height: 2em;
+}
+
+.banner {
+  aspect-ratio: 17 / 6;
+}
+
+.socials {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1em;
+  background-color: #1b1b1b;
+  padding-top: 5em;
+  padding-bottom: 5em;
+}
+
+.social-card {
+  width: 75%;
+  text-align: left;
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: #1b1b1b;
+  display: block;
+  justify-content: center;
+  margin: 0 auto;
+  cursor: pointer;
+  transition: all 500ms ease;
+}
+
+.social-card:hover {
+  background-color: #2b2b2b;
+}
+
+.sc-head {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
