--- a/src/pages/card.astro
+++ b/src/pages/card.astro
@@ -33,7 +33,7 @@ import KFooter from "../components/KFooter.astro"
 	<body>
         <div class="content">
             <div class="social-con">
-                <img width=100% class="banner" src="../../public/img/Kyanoxia-elegance-logo.png" alt="Elegant Black Gold Kyanoxia Banner"/>
+                <img width=100% class="banner" src="Kyanoxia-elegance-logo.png" alt="Elegant Black Gold Kyanoxia Banner"/>
                 <div class="socials">
                     <div class="social-card" onclick="location.href='https://kyanoxia.com/join';">
                         <div class="sc-head">
