--- a/src/pages/card.astro
+++ b/src/pages/card.astro
@@ -25,7 +25,7 @@ import KFooter from "../components/KFooter.astro"
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
         <meta property="og:site_name" content="The Kyanet" />
-		<meta property="og:title" content=`${identity.name}ss Socials'` />
+		<meta property="og:title" content=`${identity.name}'s Socials` />
 		<meta property="og:description" content=`Want to know where ${identity.name} is?` />
 		<meta name="theme-color" content=#A37C44 />
         <script src="https://kit.fontawesome.com/6a9ec12e2e.js" crossorigin="anonymous"></script>
