Fix header screen

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,8 +28,8 @@ import "../styles/global.css"
 	</head>
 	<body style="background-color: #1b1b1b;">
 		<div class="content" style="display: flex; justify-content: center; align-items: center;">
-			<h1 class="grotesk-head-2" style="line-height: 0.5; font-size: 2.5em;">KYANOXIA RIVERA</h1>
-			<h1 class="grotesk-head" style="font-size: 5em; line-height: 0.5;">{pageTitle}</h1>
+			<h1 class="grotesk-head-2" style="line-height: 1; font-size: 2.5em; margin-bottom: 0;">KYANOXIA RIVERA</h1>
+			<h1 class="grotesk-head" style="font-size: 5em; line-height: 0.75;">{pageTitle}</h1>
 		</div>
 		<a href="/card" class="dm-foot">COMING SOON</a>
 	</body>
