--- a/src/components/KFooter.astro
+++ b/src/components/KFooter.astro
@@ -1,8 +1,11 @@
 ---
 interface Props {
-    page?: string,
-}
+    page: string
+};
+
+const { page } = Astro.props;
 ---
-<div class="kfooter" style="bottom: 0px; left: 0px; right: 0px; background-color: #1b1b1b; padding: 20px 20px; text-align: left;">
-    <sub style="color: #5b5b5b;">Copyright 2024 © Kyanoxia</sub>
+<div class="kfooter" style="left: 0px; right: 0px; bottom: 0px; background-color: #1b1b1b; padding: 20px 20px; display: flex; justify-content: space-between;">
+    <sub style="color: #5b5b5b; text-align: right;">Copyright 2024 © Kyanoxia</sub>
+    <sub style="color: #5b5b5b; text-align: left">{page}</sub>
 </div>
