--- a/src/pages/schedule.astro
+++ b/src/pages/schedule.astro
@@ -7,6 +7,8 @@ const pageTitle = "Schedule - The Kyanet"
 import KFooter from "../components/KFooter.astro";
 import "../styles/global.css"
 
+var gameImage: string = "https://images.igdb.com/igdb/image/upload/t_720p/scii52.webp";
+
 //Astro.cookies.set("Balls", String("Testicles lmaooooo"));
 //Astro.cookies.delete("Balls");
 
@@ -20,21 +22,55 @@ import "../styles/global.css"
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
+		<meta charset="utf-8" />
+		<meta property="og:site_name" content="The Kyanet" />
+		<meta property="og:title" content=`Schedule` />
+		<meta property="og:description" content=`Weekly stream schedule for Kyanoxia` />
+		<meta name="theme-color" content=#D4CBE5 />
+		<title>Join Us</title>
 	</head>
-	<body style="background-color: #1b1b1b;">
+	<body style="min-height: 100%">
 		<h1>Calendar Info:</h1>
 		<div class="calendar">
-			<p>Sunday: {(typeof req.schedule["Sunday"]?.categories[0] === 'undefined') ? 'Resting' : req.schedule["Sunday"]?.categories[0]}</p>
-			<p>Monday: {(typeof req.schedule["Monday"]?.categories[0] === 'undefined') ? 'Resting' : req.schedule["Monday"]?.categories[0]}</p>
-			<p>Tuesday: {(typeof req.schedule["Tuesday"]?.categories[0] === 'undefined') ? 'Resting' : req.schedule["Tuesday"]?.categories[0]}</p>
-			<p>Wednesday: {(typeof req.schedule["Wednesday"]?.categories[0] === 'undefined') ? 'Resting' : req.schedule["Wednesday"]?.categories[0]}</p>
-			<p>Thursday: {(typeof req.schedule["Thursday"]?.categories[0] === 'undefined') ? 'Resting' : req.schedule["Thursday"]?.categories[0]}</p>
-			<p>Friday: {(typeof req.schedule["Friday"]?.categories[0] === 'undefined') ? 'Resting' : req.schedule["Friday"]?.categories[0]}</p>
-			<p>Saturday: {(typeof req.schedule["Saturday"]?.categories[0] === 'undefined') ? 'Resting' : req.schedule["Saturday"]?.categories[0]}</p>
+			<div class="cal-entry">
+				<img class="cal-img" src=`${(typeof req.schedule["Sunday"]?.categories[0] === 'undefined') ? "" : gameImage}`>
+				<p>Sunday:</p>
+				<span>{(typeof req.schedule["Sunday"]?.categories[0] === 'undefined') ? 'Resting' : req.schedule["Sunday"]?.categories[0]}</span>
+			</div>
+			<div class="cal-entry">
+				<img class="cal-img" src=`${(typeof req.schedule["Monday"]?.categories[0] === 'undefined') ? "" : gameImage}`>
+				<p>Monday:</p>
+				<span>{(typeof req.schedule["Monday"]?.categories[0] === 'undefined') ? 'Resting' : req.schedule["Monday"]?.categories[0]}</span>
+			</div>
+			<div class="cal-entry">
+				<img class="cal-img" src=`${(typeof req.schedule["Tuesday"]?.categories[0] === 'undefined') ? "" : gameImage}`>
+				<p>Tuesday:</p>
+				<span>{(typeof req.schedule["Tuesday"]?.categories[0] === 'undefined') ? 'Resting' : req.schedule["Tuesday"]?.categories[0]}</span>
+			</div>
+			<div class="cal-entry">
+				<img class="cal-img" src=`${(typeof req.schedule["Wednesday"]?.categories[0] === 'undefined') ? "" : gameImage}`>
+				<p>Wednesday:</p>
+				<span>{(typeof req.schedule["Wednesday"]?.categories[0] === 'undefined') ? 'Resting' : req.schedule["Wednesday"]?.categories[0]}</span>
+			</div>
+			<div class="cal-entry">
+				<img class="cal-img" src=`${(typeof req.schedule["Thursday"]?.categories[0] === 'undefined') ? "" : gameImage}`>
+				<p>Thursday:</p>
+				<span>{(typeof req.schedule["Thursday"]?.categories[0] === 'undefined') ? 'Resting' : req.schedule["Thursday"]?.categories[0]}</span>
+			</div>
+			<div class="cal-entry">
+				<img class="cal-img" src=`${(typeof req.schedule["Friday"]?.categories[0] === 'undefined') ? "" : gameImage}`>
+				<p>Friday:</p>
+				<span>{(typeof req.schedule["Friday"]?.categories[0] === 'undefined') ? 'Resting' : req.schedule["Friday"]?.categories[0]}</span>
+			</div>
+			<div class="cal-entry">
+				<img class="cal-img" src=`${(typeof req.schedule["Saturday"]?.categories[0] === 'undefined') ? "" : gameImage}`>
+				<p>Saturday:</p>
+				<span>{(typeof req.schedule["Saturday"]?.categories[0] === 'undefined') ? 'Resting' : req.schedule["Saturday"]?.categories[0]}</span>
+			</div>
 		</div>
-		<p>If images are not loading, please <a href="https://id.twitch.tv/oauth2/authorize?response_type=token&client_id=z4pwosn4a3lyqhm139nw1wx6t5ytn2&redirect_uri=http://localhost:4321/schedule&scope=user%3Aread%3Achat">Connect with Twitch.</a> <a href="/support/twitch-connection">Why am I seeing this?</a></p>
+		<p>If images are not loading, please <a href="https://id.twitch.tv/oauth2/authorize?response_type=token&client_id=z4pwosn4a3lyqhm139nw1wx6t5ytn2&redirect_uri=http://localhost:4321/schedule&scope=user%3Aread%3Aemail">Connect with Twitch.</a> <a href="/support/twitch-connection">Why am I seeing this?</a></p>
 	</body>
 	<footer>
-		<KFooter />
+		<KFooter page="Schedule"/>
 	</footer>
 </html>
