Twitter Tag Integration

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,7 +1,7 @@
 ---
 export const prerender = false;
 
-const pageTitle = "The Kyanet"
+const pageTitle = "404 Not Found"
 
 const identity = {
 	name: "Kyanoxia Rivera",
@@ -34,6 +34,6 @@ import "../styles/global.css"
 		</div>
 	</body>
 	<footer>
-		<KFooter page="404 Not Found"/>
+		<KFooter page=`${pageTitle}`/>
 	</footer>
 </html>
