--- a/src/pages/card.astro
+++ b/src/pages/card.astro
@@ -77,9 +77,9 @@ import KFooter from "../components/KFooter.astro"
                             <i class="fa-brands fa-reddit fa-lg"></i>
                         </div>
                     </div>
-                </div>    
+                </div>
+                <KFooter page=`${pageTitle}`/>
             </div>
-            <KFooter page="Card"/>
         </div>
 	</body>
 </html>
