--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,6 +34,6 @@ import "../styles/global.css"
 		<a href="/card" class="dm-foot">COMING SOON</a>
 	</body>
 	<footer>
-		<KFooter page="Home"/>
+		<KFooter page=`${pageTitle}`/>
 	</footer>
 </html>
