--- a/src/pages/join.astro
+++ b/src/pages/join.astro
@@ -13,6 +13,13 @@ const req = Astro.locals;
 		<meta property="og:title" content=`${req.dscName}` />
 		<meta property="og:description" content=`${req.dscDesc}` />
 		<meta property="og:image" content=`${req.dscImg}` />
+
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:site" content="VainDiscord by Kyanoxia" />
+		<meta name="twitter:title" content=`${req.dscName}` />
+		<meta name="twitter:description" content=`${req.dscDesc}` />
+		<meta name="twitter:image" content=`${req.dscImg}` />
+
 		<meta name="theme-color" content=#D4CBE5 />
 		<title>Join Us</title>
 	</head>
