--- a/src/pages/schedule.astro
+++ b/src/pages/schedule.astro
@@ -71,6 +71,6 @@ var gameImage: string = "https://images.igdb.com/igdb/image/upload/t_720p/scii52
 		<p>If images are not loading, please <a href="https://id.twitch.tv/oauth2/authorize?response_type=token&client_id=z4pwosn4a3lyqhm139nw1wx6t5ytn2&redirect_uri=http://localhost:4321/schedule&scope=user%3Aread%3Aemail">Connect with Twitch.</a> <a href="/support/twitch-connection">Why am I seeing this?</a></p>
 	</body>
 	<footer>
-		<KFooter page="Schedule"/>
+		<KFooter page=`${pageTitle}`/>
 	</footer>
 </html>
