--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+@import url('https://fonts.cdnfonts.com/css/general-sans');
 
 @font-face {
   font-family: multiplexed;
@@ -79,11 +80,12 @@ html {
 body {
   margin: 0 auto;
   width: 100%;
-  line-height: 1.5;
+  line-height: 1;
   text-align: center;
   justify-content: space-between;
   display: flex;
   flex-direction: column;
+  padding: 0 25px;
 }
 
 * {
@@ -204,4 +206,27 @@ h1 {
   font-size: 2em;
   font-style: italic;
   text-shadow: 0px 0px 10px black;
+}
+
+.crisis {
+  display: flex;
+  align-self: center;
+  gap: 5px;
+  flex-flow: row wrap;
+}
+
+.crisis-help {
+  background-color: #2b2b2b;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  padding: 15px 50px;
+  justify-content: space-around;
+  border-radius: 7px;
+  text-decoration: none;
+  color: white;
+  min-width: 0;
+  flex:  1 1 100px;
+  white-space: nowrap;;
 }
