Fixing twitter card type

--- a/src/pages/join.astro
+++ b/src/pages/join.astro
@@ -14,7 +14,7 @@ const req = Astro.locals;
 		<meta property="og:description" content=`${req.dscDesc}` />
 		<meta property="og:image" content=`${req.dscImg}` />
 
-		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:site" content="VainDiscord by Kyanoxia" />
 		<meta name="twitter:title" content=`${req.dscName}` />
 		<meta name="twitter:description" content=`${req.dscDesc}` />
