--- a/src/pages/traumadumping.astro
+++ b/src/pages/traumadumping.astro
@@ -31,7 +31,7 @@ import "../styles/global.css"
 		<meta property="og:title" content=`Please no Trauma Dumping!` />
 		<meta property="og:description" content=`Trauma dumping is a hostile behavior that can cause damage to anyone involved...` />
 
-		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:site" content="The Kyanet" />
 		<meta name="twitter:title" content="Please no Traume Dumping!" />
 		<meta name="twitter:description" content="Trauma dumping is a hostile behavior that can cause damage to anyone involved..." />
