--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,7 +1,10 @@
 ---
 export const prerender = false;
 
-const pageTitle = "404 Not Found"
+const pageTitle = "404 Not Found";
+const pageDescription = "Uh Oh! Something went wrong here...";
+const pageImage = "";
+const pageColor = "#1b1b1b";
 
 const identity = {
 	name: "Kyanoxia Rivera",
@@ -9,31 +12,49 @@ const identity = {
 	nickname: "Kya",
 	pronouns: "she/her",
 	race: "Human Fox Hybrid",
-	discord: "DVvGFXqpqH",
 	occupation: "Graphic Designer",
-
-}
+	iteration: 0
+};
 
 import KFooter from "../components/KFooter.astro";
-import "../styles/global.css"
+import "../styles/global.css";
 ---
-
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+		
+		<meta property="og:site_name" content="The Kyanet" />
+		<meta property="og:title" content=`${pageTitle}` />
+		<meta property="og:description" content=`${pageDescription}` />
+		<meta property="og:image" content=`${pageImage}` />
+
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:site" content="The Kyanet" />
+		<meta name="twitter:title" content=`${pageTitle}` />
+		<meta name="twitter:description" content=`${pageDescription}` />
+		<meta name="twitter:url" content=`https://kyanoxia.com/`>
+		<meta name="twitter:image" content=`${pageImage}` />
+
+		<meta itemprop="name" content=`${pageTitle}` />
+		<meta itemprop="description" content=`${pageDescription}` />
+		<meta itemprop="image" content=`${pageImage}` />
+
+		<meta name="theme-color" content=`${pageColor}` />
+
 		<title>{pageTitle}</title>
+
+		<script is:inline src="https://kit.fontawesome.com/6a9ec12e2e.js" crossorigin="anonymous"></script>
 	</head>
-	<body style="background-color: #1b1b1b; height: 100%">
-		<div class="content" style="display: flex; justify-content: center; align-items: center;">
-			<h1 style="color: rgba(255, 255, 255, 0.5); font-family: 'DM Sans'; line-height: 1; font-size: 2.5em; margin-bottom: 0; font-weight:">404 Error</h1>
-			<h1 class="err-head" style="font-size: 5em; line-height: 0.75;">NOT FOUND</h1>
-			<p style="font-family: 'DM Sans'; color: rgba(255, 255, 255, 0.5);">If you're sure this is a mistake, please contact Kya to fix it!</p>
+	<body style="background-color: #1b1b1b;">
+		<div class="content" style="text-align: center; height: 100vh;">
+			<div class="headers" style="margin: auto 0;">
+				<h1 class="grotesk-head-2">404</h1>
+				<h1 class="grotesk-head" style="font-size: 5em;">PAGE NOT FOUND</h1>
+			</div>
 		</div>
+		<KFooter page=`${pageTitle}` />
 	</body>
-	<footer>
-		<KFooter page=`${pageTitle}`/>
-	</footer>
 </html>
