--- a/src/pages/join.astro
+++ b/src/pages/join.astro
@@ -9,16 +9,24 @@ const req = Astro.locals;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+		
 		<meta property="og:site_name" content="VainDiscord by Kyanoxia" />
 		<meta property="og:title" content=`${req.dscName}` />
 		<meta property="og:description" content=`${req.dscDesc}` />
 		<meta property="og:image" content=`${req.dscImg}` />
+		<meta property="og:image:width" content="128">
+    	<meta property="og:image:height" content="128">
 
 		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:site" content="VainDiscord by Kyanoxia" />
 		<meta name="twitter:title" content=`${req.dscName}` />
 		<meta name="twitter:description" content=`${req.dscDesc}` />
 		<meta name="twitter:image" content=`${req.dscImg}` />
+		<meta name="twitter:url" content=`${req.dscURL}`>
+
+		<meta itemprop="name" content=`${req.dscName}`>
+		<meta itemprop="description" content=`${req.dscDesc}`>
+		<meta itemprop="image" content=`${req.dscImg}`>
 
 		<meta name="theme-color" content=#D4CBE5 />
 		<title>Join Us</title>
@@ -26,5 +34,5 @@ const req = Astro.locals;
 	<body>
 		<h1>Redirecting...</h1>
 		<p>If you're seeing this, the site is most likely broken! Please contact Kyanoxia to fix it!</p>
--	</body>
+	</body>
 </html>
