--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -65,8 +65,6 @@
   font-family: 'DM Sans';
   font-weight: 200;
   letter-spacing: 0.5ch;
-  font-size: xx-large;
-  text-decoration: none;
   color: whitesmoke;
 }
 
@@ -74,22 +72,33 @@ html {
   background-color: #1f1f1f;
   font-family: sans-serif;
   color: white;
-  height: 100%;
+  height: 100dvh;
 }
   
 body {
-  margin: 0 auto;
-  width: 100%;
-  line-height: 1;
-  text-align: center;
-  justify-content: space-between;
+  margin: 0;
+  padding-bottom: 15px;
   display: flex;
   flex-direction: column;
   padding: 0 25px;
+  min-height: 100dvh;
+}
+
+footer {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+a {
+  color: white;
+  text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+  font-family: 'General Sans', sans-serif;
 }
 
 h1 {
@@ -97,16 +106,16 @@ h1 {
   font-size: 2.5rem;
 }
 
-.flex-center {
-  align-self: center;
+.spacer {
+  margin: 25px 0;
 }
 
 .content {
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
-  width: 100%;
   height: 100%;
+  align-items: center;
+  align-self: center;
 }
 
 .social-con {
@@ -114,14 +123,6 @@ h1 {
   flex-direction: column;
   margin: auto 0;
   max-width: 80ch;
-}
-
-.separator-lg {
-  height: 5em;
-}
-
-.separator {
-  height: 2em;
 }
 
 .banner {
@@ -213,6 +214,7 @@ h1 {
   align-self: center;
   gap: 5px;
   flex-flow: row wrap;
+  justify-content: center;
 }
 
 .crisis-help {
@@ -221,12 +223,13 @@ h1 {
   flex-direction: column;
   align-items: center;
   gap: 15px;
-  padding: 15px 50px;
+  padding: 15px 25px;
   justify-content: space-around;
   border-radius: 7px;
   text-decoration: none;
   color: white;
   min-width: 0;
   flex:  1 1 100px;
-  white-space: nowrap;;
+  white-space: nowrap;
+  width: 100px;
 }
