--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,7 +53,7 @@ import "../styles/global.css";
 	<body style="background-color: #1b1b1b;">
 		<div class="content" style="text-align: center; height: 100vh;">
 			<div class="headers" style="margin: auto 0;">
-				<h1 class="grotesk-head-2">{identity.name}</h1>
+				<span class="grotesk-head-2" style="font-size: 2.5em">{identity.name}</span>
 				<h1 class="grotesk-head" style="font-size: 5em;">The Kyanet</h1>
 			</div>
 			<span class="dm-foot" style="font-size: xx-large;">COMING SOON...</span>
