--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -69,7 +69,6 @@
 }
 
 html {
-  background-color: #1f1f1f;
   font-family: sans-serif;
   color: white;
   height: 100dvh;
@@ -80,7 +79,7 @@ body {
   padding-bottom: 15px;
   display: flex;
   flex-direction: column;
-  padding: 0 25px;
+  padding: 0;
   min-height: 100dvh;
 }
 
@@ -114,8 +113,18 @@ h1 {
   display: flex;
   flex-direction: column;
   height: 100%;
+  width: 100%;
   align-items: center;
   align-self: center;
+  position: relative;
+}
+
+.header-img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  position: relative;
+  z-index: -1;
 }
 
 .social-con {
@@ -131,29 +140,38 @@ h1 {
 
 .socials {
   display: flex;
-  justify-content: center;
   flex-direction: column;
-  gap: 1em;
-  background-color: #1b1b1b;
-  padding-top: 5em;
-  padding-bottom: 5em;
+  gap: 0.25em;
+  background-color: #2b2b2b;
+  border: 0.25em solid #2b2b2b;
+  border-radius: 13px;
 }
 
 .social-card {
-  width: 75%;
   text-align: left;
-  padding-left: 20px;
+  padding-left: 15px;
   padding-right: 20px;
-  background-color: #1b1b1b;
-  display: block;
-  justify-content: center;
-  margin: 0 auto;
+  background-color: #2b2b2b;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2em;
   cursor: pointer;
   transition: all 500ms ease;
+  flex:  1 1 50px;
+  border-radius: 10px;
 }
 
 .social-card:hover {
-  background-color: #2b2b2b;
+  background-color: #1b1b1b;
+}
+
+.social-card > i {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 25px;
+  aspect-ratio: 1 / 1;
 }
 
 .sc-head {
