--- a/src/components/KFooter.astro
+++ b/src/components/KFooter.astro
@@ -1,11 +1,12 @@
 ---
 interface Props {
-    page: string
+    page: string;
+    color: string;
 };
 
-const { page } = Astro.props;
+const { page, color } = Astro.props;
 ---
-<div class="kfooter" style="left: 0px; right: 0px; background-color: #1b1b1b; padding: 20px 20px; display: flex; justify-content: space-between; margin-top: auto;">
+<div class="kfooter" style=`left: 0px; right: 0px; background-color: ${color}; padding: 20px 20px; display: flex; justify-content: space-between; margin-top: auto;`>
     <sub style="color: #5b5b5b; text-align: right;">Copyright 2024 © Kyanoxia</sub>
     <sub style="color: #5b5b5b; text-align: left">{page}</sub>
 </div>
