--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,11 +55,12 @@ import "../styles/global.css";
 			<div class="headers" style="margin: auto 0;">
 				<span class="grotesk-head-2" style="font-size: 2.5em">{identity.name}</span>
 				<h1 class="grotesk-head" style="font-size: 5em;">The Kyanet</h1>
+				<span class="dm-foot" style="color: gray; font-weight: 500;">ソノルミネセンス</span>
 			</div>
 			<span class="dm-foot" style="font-size: xx-large;">COMING SOON...</span>
 			<a href="card" class="dm-foot" style="color: gray;">check my socials yo</a>
 			<div class="spacer" style="font-weight: 200;"></div>
 		</div>
-		<KFooter page=`${pageTitle}` />
+		<KFooter page=`${pageTitle}` color="#1b1b1b" />
 	</body>
 </html>
