--- a/src/special/template.astro
+++ b/src/special/template.astro
@@ -73,6 +73,6 @@ import "../styles/global.css";
 
 			<h3>Remember you can use a tags as containers too, you don't need to use a div with onclick. That's bad for SEO.</h3>
 		</div>
-		<KFooter page=`${pageTitle}` />
+		<KFooter page=`${pageTitle}` color="#1b1b1b" />
 	</body>
 </html>
