--- a/src/pages/card.astro
+++ b/src/pages/card.astro
@@ -52,7 +52,7 @@ import "../styles/global.css";
 	</head>
 	<body style="background-color: #1b1b1b;">
 		<div class="content" style="text-align: center;">
-			<img src="Kyanoxia-elegance-logo.png" alt="Kyanoxia Banner" class="header-img">
+			<img src="public/Kyanoxia-elegance-logo.png" alt="Kyanoxia Banner" class="header-img">
 			<h1>Where can you find me?</h1>
 			<summary style="max-width: 80ch;">I offer plenty of ways to connect - below is a list that shows all of my socials! I may be active on some more than others, but I always try to keep up!</summary>
 
@@ -93,6 +93,6 @@ import "../styles/global.css";
 
 			<sub style="color: gray;">I try to order them from most to least active, so keep that in mind</sub>
 		</div>
-		<KFooter page=`${pageTitle}` />
+		<KFooter page=`${pageTitle}` color="#1b1b1b"/>
 	</body>
 </html>
