--- a/src/pages/traumadumping.astro
+++ b/src/pages/traumadumping.astro
@@ -78,6 +78,6 @@ import "../styles/global.css";
 				</a>
 			</div>
 		</div>
-		<KFooter page=`${pageTitle}` />
+		<KFooter page=`${pageTitle}` color="#1b1b1b" />
 	</body>
 </html>
