--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -55,6 +55,6 @@ import "../styles/global.css";
 				<h1 class="grotesk-head" style="font-size: 5em;">PAGE NOT FOUND</h1>
 			</div>
 		</div>
-		<KFooter page=`${pageTitle}` />
+		<KFooter page=`${pageTitle}` color="#1b1b1b" />
 	</body>
 </html>
