--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,28 +9,28 @@
 }
 
 @font-face {
-  src: url(public/QuantaGroteskPro-BlackItalic.ttf);
+  src: url(QuantaGroteskPro-BlackItalic.ttf);
   font-family: grotesk;
   font-weight: bold;
   font-style: italic;
 }
 
 @font-face {
-  src: url(public/QuantaGroteskPro-Regular.ttf);
+  src: url(QuantaGroteskPro-Regular.ttf);
   font-family: grotesk;
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  src: url(public/QuantaGroteskPro-Light.ttf);
+  src: url(QuantaGroteskPro-Light.ttf);
   font-family: grotesk;
   font-weight: light;
   font-style: normal;
 }
 
 @font-face {
-  src: url(public/QuantaGroteskPro-LightItalic.ttf);
+  src: url(QuantaGroteskPro-LightItalic.ttf);
   font-family: grotesk;
   font-weight: light;
   font-style: italic;
