Revamp card, add about, and add portfolio images (pending update)

--- a/src/components/KFooter.astro
+++ b/src/components/KFooter.astro
@@ -6,7 +6,7 @@ interface Props {
 
 const { page, color } = Astro.props;
 ---
-<div class="kfooter" style=`left: 0px; right: 0px; background-color: ${color}; padding: 20px 20px; display: flex; justify-content: space-between; margin-top: auto;`>
-    <sub style="color: #5b5b5b; text-align: right;">Copyright 2024 © Kyanoxia</sub>
-    <sub style="color: #5b5b5b; text-align: left">{page}</sub>
+<div class="kfooter" style=`left: 0px; right: 0px; background-color: ${color}; padding: 20px 20px; display: flex; justify-content: space-between; gap: 2em;margin-top: auto;`>
+    <sub style="color: #5b5b5b; text-align: left;">Copyright © 2024-2025 Kyanoxia, All Rights Reserved</sub>
+    <sub style="color: #5b5b5b; text-align: right">{page}</sub>
 </div>
