--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,8 @@
 export const prerender = false;
 
 const pageTitle = "Home";
-const pageDescription = "Welcome to the Kyanet - Rivera's proxy to promethius.";
-const pageImage = "";
+const pageDescription = "Welcome to the Kyanet";
+const pageImage = "img/kyanet-logo.png";
 const pageColor = "#1b1b1b";
 
 const identity = {
@@ -22,7 +22,7 @@ import "../styles/global.css";
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="svg/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		
@@ -51,14 +51,25 @@ import "../styles/global.css";
 		<script is:inline src="https://kit.fontawesome.com/6a9ec12e2e.js" crossorigin="anonymous"></script>
 	</head>
 	<body style="background-color: #1b1b1b;">
-		<div class="content" style="text-align: center; height: 100vh;">
-			<div class="headers" style="margin: auto 0;">
-				<span class="grotesk-head-2" style="font-size: 2.5em">{identity.name}</span>
-				<h1 class="grotesk-head" style="font-size: 5em;">The Kyanet</h1>
-				<span class="dm-foot" style="color: gray; font-weight: 500;">ソノルミネセンス</span>
+		<div class="content center" style="text-align: center; height: 100vh; display: flex; flex-direction: column; justify-content: space-between; max-width: 80ch;">
+			<div class="headers vstack" style="margin: auto 0; gap: 5em;">
+				<div class="vstack">
+					<span class="grotesk-head-2" style="font-size: 2.5em">Welcome to</span>
+					<h1 class="grotesk-head" style="font-size: 5em;">The Kyanet</h1>
+					<span class="dm-foot" style="color: gray; font-weight: 500;">ソノルミネセンス</span>
+				</div>
+				<div class="vstack" style="gap: 5em;">
+					<div class="information" style="text-align: left; background-color: #2b2b2b; padding: 2em; border-radius: 15px;">
+						<p class="dm">I am driven by my thirst for knowledge and strive to learn more about everything</p>
+						<a href="/about" class="dm-foot" style="color: gray;">learn more</a>
+					</div>
+					<div class="information" style="text-align: right; background-color: #2b2b2b; padding: 2em; border-radius: 15px;">
+						<p class="dm">Want to get in contact with me, or check my recent progress?</p>
+						<a href="/card" class="dm-foot" style="color: gray;">check my socials yo</a>
+					</div>
+				</div>
 			</div>
-			<span class="dm-foot" style="font-size: xx-large;">COMING SOON...</span>
-			<a href="card" class="dm-foot" style="color: gray;">check my socials yo</a>
+			<span class="dm-foot" style="color: gray;">"And without purpose, we are nothing. If you are nothing, your purpose is to find it."</span>
 			<div class="spacer" style="font-weight: 200;"></div>
 		</div>
 		<KFooter page=`${pageTitle}` color="#1b1b1b" />
