--- a/src/pages/skycord.astro
+++ b/src/pages/skycord.astro
@@ -24,7 +24,7 @@ import "../styles/global.css";
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="svg//favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		
@@ -53,12 +53,12 @@ import "../styles/global.css";
 		<script is:inline src="https://kit.fontawesome.com/6a9ec12e2e.js" crossorigin="anonymous"></script>
 	</head>
 	<body style="background: linear-gradient(-45deg, rgba(11,122,255,1), rgba(90,184,254,1)); background-repeat: no-repeat; background-attachment: fixed;">
-		<div class="content" style="text-align: center; max-width: 80ch; width: 100%; margin-top: 50px; margin-bottom: 50px; padding: 50px; background-color: white; border-radius: 15px; box-shadow: 0px 0px 50px rgba(0, 0, 0, .25);">
-            <img src="/Skycord.svg" alt="Discord logo Clyde with Bluesky's wings. The logo for Skycord with the text 'Skycord' underneath it." class="skycordlogo">
+		<div class="content center" style="text-align: center; max-width: 80ch; width: 100%; margin-top: 50px; margin-bottom: 50px; padding: 50px; background-color: white; border-radius: 15px; box-shadow: 0px 0px 50px rgba(0, 0, 0, .25);">
+            <img src="svg/Skycord.svg" alt="Discord logo Clyde with Bluesky's wings. The logo for Skycord with the text 'Skycord' underneath it." class="skycordlogo">
 			<div class="spacer"></div>
             <h1 style="color: black; font-weight: 500; font-size: xx-large">Announcements in your servers</h1>
 			<p style="color: black;">Skycord is an expert-coded Discord bot created for the sole purpose of announcing your new Bluesky posts in any channel you want.  Simply add the bot, and use the /connect command to subscribe to your account!</p>
-			<img src="/skycord-screenie.png" alt="Screenshot of a Discord embed posted by Skycord." style="border-radius: 10px;">
+			<img src="img/skycord-screenie.png" alt="Screenshot of a Discord embed posted by Skycord." style="border-radius: 10px;">
 			<div class="spacer"></div>
 			<div class="hstack">
 				<a href="https://github.com/kyanoxia/skycord" style="background-color: #369cff; padding: 10px; border-radius: 7px; margin: 5px;">Get it on GitHub</a>
