--- a/src/pages/traumadumping.astro
+++ b/src/pages/traumadumping.astro
@@ -3,7 +3,7 @@ export const prerender = false;
 
 const pageTitle = "On Trauma Dumping...";
 const pageDescription = "Trauma dumping is a hostile behavior that can hurt anyone involved...";
-const pageImage = "";
+const pageImage = "img/kyanet-logo.png";
 const pageColor = "#1b1b1b";
 
 const identity = {
@@ -22,7 +22,7 @@ import "../styles/global.css";
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="svg/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		
@@ -51,7 +51,7 @@ import "../styles/global.css";
 		<script is:inline src="https://kit.fontawesome.com/6a9ec12e2e.js" crossorigin="anonymous"></script>
 	</head>
 	<body style="background-color: #1b1b1b;">
-		<div class="content" style="text-align: center; max-width: 80ch;">
+		<div class="content center" style="text-align: center; max-width: 80ch;">
 			<h1 style="margin-top: 50px;">{pageTitle}</h1>
 			<h2 style="font-weight: 400; color: gray;">Unless otherwise specified, <span style="font-style: italic; text-decoration: underline; text-transform: uppercase;">don't do it!</span></h2>
 			<ul style="text-align: left; display: flex; flex-direction: column; gap: 1em; font-weight: 300; max-width: 60ch;">
