--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,32 +5,32 @@
   font-family: multiplexed;
   font-weight: normal;
   font-style: normal;
-  src: url(multiplexed.ttf);
+  src: url(fonts/multiplexed.ttf);
 }
 
 @font-face {
-  src: url(QuantaGroteskPro-BlackItalic.ttf);
+  src: url(fonts/QuantaGroteskPro-BlackItalic.ttf);
   font-family: grotesk;
   font-weight: bold;
   font-style: italic;
 }
 
 @font-face {
-  src: url(QuantaGroteskPro-Regular.ttf);
+  src: url(fonts/QuantaGroteskPro-Regular.ttf);
   font-family: grotesk;
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  src: url(QuantaGroteskPro-Light.ttf);
+  src: url(fonts/QuantaGroteskPro-Light.ttf);
   font-family: grotesk;
   font-weight: light;
   font-style: normal;
 }
 
 @font-face {
-  src: url(QuantaGroteskPro-LightItalic.ttf);
+  src: url(fonts/QuantaGroteskPro-LightItalic.ttf);
   font-family: grotesk;
   font-weight: light;
   font-style: italic;
@@ -66,6 +66,11 @@
   font-weight: 200;
   letter-spacing: 0.5ch;
   color: whitesmoke;
+}
+
+.dm {
+  font-family: 'DM Sans';
+  font-weight: 200;
 }
 
 html {
@@ -105,6 +110,10 @@ h1 {
   font-size: 2.5rem;
 }
 
+h2 {
+  margin: 0;
+}
+
 .spacer {
   margin: 25px 0;
 }
@@ -114,9 +123,12 @@ h1 {
   flex-direction: column;
   height: 100%;
   width: 100%;
+  position: relative;
+}
+
+.center {
   align-items: center;
   align-self: center;
-  position: relative;
 }
 
 .header-img {
@@ -255,4 +267,20 @@ h1 {
 .skycordlogo {
   fill: #369cff;
   width: 50%;
+}
+
+.vstack {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.description {
+  color: #d5d5d5;
+}
+
+.social {
+  background-color: #2b2b2b;
+  padding: 2em;
+  border-radius: 15px;
 }
