--- a/src/pages/skycord.astro
+++ b/src/pages/skycord.astro
@@ -58,7 +58,7 @@ import "../styles/global.css";
 			<div class="spacer"></div>
             <h1 style="color: black; font-weight: 500; font-size: xx-large">Announcements in your servers</h1>
 			<p style="color: black;">Skycord is an expert-coded Discord bot created for the sole purpose of announcing your new Bluesky posts in any channel you want.  Simply add the bot, and use the /connect command to subscribe to your account!</p>
-			<img src="img/skycord-screenie.png" alt="Screenshot of a Discord embed posted by Skycord." style="border-radius: 10px;">
+			<img src="img/skycord-example.png" alt="Screenshot of a Discord embed posted by Skycord." style="border-radius: 10px;">
 			<div class="spacer"></div>
 			<div class="hstack">
 				<a href="https://github.com/kyanoxia/skycord" style="background-color: #369cff; padding: 10px; border-radius: 7px; margin: 5px;">Get it on GitHub</a>
